<resources>
    <string name="app_name">Q-Wash Washer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t Have An Account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_register">Register</string>
    <string name="button_login">Login</string>
    <string name="message_denied">Permission \"%1$s\" has been denied.</string>
    <string name="title_activity_lock_washer">Lock Washer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="office_address">Ruko Parakan Kavling 8E, Jl. Parakan, Pd. Benda, Pamulang, Kota Tangerang Selatan, Banten, 15417</string>
    <string name="hint_number">877–7889–9430</string>
    <string name="city">City</string>
    <string name="button_continue">CONTINUE</string>
    <string name="title_activity_topup">Top Up</string>
    <string name="val_email_length">Email must be at least 5 chars and 100 chars length</string>
    <string name="val_password_length">Password must be at least 5 chars</string>
    <string name="val_new_password_length">New password must be at least 5 chars</string>
    <string name="val_full_name">Fill your name</string>
    <string name="val_telp_length">Fill your phone number</string>
    <string name="val_province_length">Complete your province</string>
    <string name="val_city_length">Complete your city</string>
    <string name="server_unreachable">Oops! Something went wrong.\nPlease check your internet connection.</string>
    <string name="try_again">Try Again?</string>
    <string name="type_search">search …</string>
    <string name="full_name">Full Name</string>
    <string name="ktp">Identity Card Number (KTP)</string>
    <string name="birthday">Date of Birthday</string>
    <string name="province">Province</string>
    <string name="text_gender">You are a</string>
    <string name="tagline">WE CLEAN YOUR VEHICLE ANYWHERE ANYTIME</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="button_create_new_account">Create New Account</string>
    <string name="des_new_account">Create your account to use Q-Wash</string>
    <string name="val_ktp_length">Identity Card Number (KTP) must 16 chars length</string>
    <string name="not_ready_job">I am not Ready</string>
    <string name="ready_job">I am Ready</string>
    <string name="total_price">Total Price</string>
    <string name="rd_exterior_wash">Exterior Wash</string>
    <string name="rd_tires_shine">Tires Shine</string>
    <string name="rd_fullbody_wash">Full Body</string>
    <string name="rd_perfumed">Perfurmed</string>
    <string name="rd_interior_vaccum">Interior Vacuum</string>
    <string name="rd_waterless">Waterless</string>
    <string name="desc_check">Show your equipment to customer.</string>
    <string name="des_photo">Photo condition of demaged vehichle parts.</string>
    <string name="des_key">Don\'t receive the car key of customer.</string>
    <string name="des_equipment">Check out the entire customer valuables in the car.</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change Password</string>
    <string name="term_of_service">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_qwash_app">Rate Qwash App</string>
    <string name="beta">BETA</string>
    <string name="desc_change_password">Verification code to change your password</string>
    <string name="desc_request_new_password">Request new password</string>
    <string name="desc_request_forgot_password">Request forgot password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New password</string>
    <string name="resend_the_text">Resend</string>
    <string name="change_number">Change Number</string>
    <string name="verification_title">Input Verification Code</string>
    <string name="verification_desc">Please check the verification code that was sent to your number  %1$s Input here:</string>
    <string name="verification_code_desc">Please check the verification code that was sent to your number. Input here:</string>
    <string name="save_and_verify"><![CDATA[Save & Verify]]></string>
    <string name="change_number_to_verify_code">Change number to verify code</string>
    <string name="must_input_diff_number">You must input different phone number</string>
    <string name="change_number_loading">Change Number …</string>
    <string name="please_wait">Please wait…</string>
    <string name="lengt_phone_val">Phone number must be 6 digits minimum and 20 digits maximum</string>
    <string name="resend_code_loading">Resend Code …</string>
    <string name="verify_code_loading">Verify Code …</string>
    <string name="title_activity_verification_code">Verification Code</string>
    <string name="title_activity_change_number">Change Number</string>
    <string name="title_activity_verify_document">Verify Document</string>
    <string name="desc_verify_document">Please attact your indentity card (KTP) and a certificate of your police (SKCK).</string>
    <string name="pick_source">Pick Image</string>
    <string name="upload_document_permission"><![CDATA[You must upload an image %s. Enable permissions WRITE_EXTERNAL_STORAGE at [Setting] > [Permission]]]></string>
    <string name="title_activity_verify_tools">Verify Tools</string>
    <string name="desc_verify_tools">Please complete equipment for washing vehicles, check the equipment that you ready have, You can also buy or installment in the nearest dealer.</string>
    <string name="agree_term_and_condition_qwash">I agree to the terms and conditions in Qwash</string>
    <string name="info_registration">You must check the agreed statement before submitting.</string>
    <string name="ok">OK</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="btn_verification_code">Verification</string>
    <string name="please_input_verification_code">Please Input verification code !</string>
    <string name="btn_upload">Upload</string>
    <string name="nama_lokasi_qwash">Ruko Parakan Tangerang Selatan</string>
    <string name="jam_kerja_qwashh">Mon - Sat, 09.00 am - 10.00 pm</string>
    <string name="your_location">Your Location</string>
    <string name="latitude_office_qwash">-6.340253</string>
    <string name="longitude_office_qwash">106.710095</string>
    <string name="info_activation">You should activation Q-Wash offline by visiting the Office of Indonesia and took the document..</string>
    <string name="notif_select_file_avatar">Please pick avatar</string>
    <string name="notif_select_file_ktp">Please pick KTP</string>
    <string name="notif_select_file_skck">Please pick SKCK</string>
    <string name="upload">Upload …</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="follow_me">Follow me</string>
    <string name="change_password_action">Change Password..</string>
    <string name="request_new_password_action">Request …</string>
    <string name="request">Request</string>
    <string name="title_activity_request_forgot_password">Request Forgot Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="request_forgot_password_action">Request …</string>
    <string name="desc_forgot_password">Reset Password</string>
    <string name="reset_password_action">Reset Password …</string>
    <string name="title_activity_verification_code_forgot_password">Verification Code</string>
    <string name="reset">Reset</string>
    <string name="debit">Debit</string>
    <string name="kredit">Credit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="wash_history">Wash History</string>
    <string name="feedback_customer">Feedback Customer</string>
    <string name="pusat_bantuan">Help Center</string>
    <string name="info">Info</string>
    <string name="logout">Logout</string>
    <string name="accept">ACCEPT</string>
    <string name="deacline">DEACLINE</string>
    <string name="call">CALL</string>
    <string name="sms">SMS</string>
    <string name="navigation">NAVIGATION</string>
    <string name="rate">RATE</string>
    <string name="wash">WASH</string>
    <string name="balance">BALANCE</string>
    <string name="rate_by_customer">Rate by Customer</string>
    <string name="or">OR</string>
    <string name="sign_in_with_washer_account">Sign in with washer account</string>
    <string name="create_account_ni_m_new_washers">Create Account I\'m new washers</string>
    <string name="connection_connected">Connected !!</string>
    <string name="connection_slowly">Your Connection is slowly !!</string>
    <string name="connection_not_connected">Not Connected. Check Your Internet !!</string>
    <string name="small">SMALL</string>
    <string name="medium">MEDIUM</string>
    <string name="big">BIG</string>
    <string name="change_language">Change Language</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>
    <string name="desc_rate_qwash" >If you enjoy using Qwash, please take a moment to rate it on the Play Store.</string>
    <string name="rate_now">Rate Now</string>
    <string name="cancel">Cancel</string>
    <string name="desc_rate_now">Rate QWash</string>
    <string name="title_rate_qwash">Rate Qwash</string>
    <string name="upload_avatar">Upload Avatar ...</string>
    <string name="upload_ktp">Upload KTP ...</string>
    <string name="upload_skck">Upload SKCK ...</string>
    <string name="button_back">Back</string>
    <string name="info_check_verify_document">With this you stated that you attach the correct documents.</string>
    <string name="please_complete_document">Please complete your document !</string>
    <string name="info_check_balance"><![CDATA[Your balance is <font color=\'red\'>%s</font>. Please top up balance.]]></string>
    <string name="check_activation">Check Activation</string>
    <string name="check_activation_action">Check Activation ...</string>

</resources>
