<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profil"
            android:checkable="true"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_wallet"
            android:checkable="true"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_wash_history"
            android:checkable="true"
            android:title="@string/wash_history" />
        <item
            android:id="@+id/nav_feedback_customer"
            android:checkable="true"
            android:title="@string/feedback_customer" />
        <item
            android:id="@+id/nav_pusat_bantuan"
            android:checkable="false"
            android:title="@string/pusat_bantuan" />
        <item
            android:id="@+id/nav_info"
            android:checkable="false"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:title="@string/logout" />

    </group>
</menu>
