<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_2196F3"
            android:orientation="vertical"
            android:padding="15dp">
            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/btn_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="{mdi-close}"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{md-star}"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp"
                android:text="@string/title_rate_qwash"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <com.qwash.washer.ui.widget.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/desc_rate_qwash"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.qwash.washer.ui.widget.RobotoRegularButton
                android:layout_marginLeft="@dimen/activity_half_vertical_margin"
                android:layout_marginRight="@dimen/activity_half_vertical_margin"
                android:layout_marginBottom="@dimen/activity_half_vertical_margin"
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="@style/btn_blue_outline"/>
            <com.qwash.washer.ui.widget.RobotoRegularButton
                android:layout_marginLeft="@dimen/activity_half_vertical_margin"
                android:layout_marginRight="@dimen/activity_half_vertical_margin"
                android:layout_marginBottom="@dimen/activity_half_vertical_margin"
                android:id="@+id/btn_rate"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:text="@string/rate_now"
                style="@style/btn_blue_outline"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>