<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginUserActivity">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/logo" />

                </LinearLayout>


                <com.qwash.washer.ui.widget.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_in_washer"
                    android:textColor="@color/black_424242" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_halft_vertical_margin"
                        android:layout_toLeftOf="@+id/right"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <com.qwash.washer.ui.widget.RobotoRegularEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="10dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#ccc" />

                        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/password"
                            android:imeOptions="actionGo"
                            android:inputType="textPassword"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:padding="10dp" />
                    </LinearLayout>

                </RelativeLayout>

                <com.qwash.washer.ui.widget.RobotoRegularButton
                    android:id="@+id/btn_login"
                    style="@style/btn_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/button_login" />

                <TextView
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/blue_2196F3" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/black_424242" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>