<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.qwash.washer.ui.widget.RobotoRegularTextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/account_type"
                    android:layout_marginTop="2dp"
                    android:text="@string/change_number_to_verify_code" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <com.qwash.washer.ui.widget.RobotoRegularEditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:digits="1234567890"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLength="14" />

                    <LinearLayout
                        android:id="@+id/wrap_bottom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btn_signup"
                        android:gravity="center|bottom"
                        android:orientation="vertical">

                        <com.qwash.washer.ui.widget.RobotoRegularButton
                            android:id="@+id/btn_save"
                            style="@style/btn_blue"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/btn_height"
                            android:text="@string/save_and_verify"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>